# ServerNav

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  clippy.yml  fmt.yml
scripts/: build.sh
server_nav_bin/: Cargo.toml
server_nav_bin/src/: main.rs
server_nav_gui/: Cargo.toml
server_nav_gui/src/gui/: app.rs
server_nav_gui/src/gui/panels/: connection.rs  file.rs  file_tree.rs  menu.rs  message.rs  mod.rs
server_nav_ssh/: Cargo.toml
server_nav_ssh/src/: lib.rs
server_nav_ssh/src/connection/: connect.rs  disconnect.rs
server_nav_ssh/src/view/: list.rs
sn_app/: Cargo.toml
sn_app/src/: main.rs
sn_gui/: Cargo.toml
sn_gui/src/: app.rs
sn_gui/src/panels/: connection.rs  export.rs  export_dir.rs  file.rs  file_options.rs  file_tree.rs  import.rs  import_dir.rs  menu.rs  message.rs  mod.rs
sn_gui/src/panels/connection/: mod.rs
sn_gui/src/panels/export/: export_directory.rs  mod.rs
sn_gui/src/panels/file/: mod.rs
sn_gui/src/panels/import/: import_directory.rs  mod.rs
sn_ssh/: Cargo.toml
sn_ssh/src/: connection.rs  file_ops.rs  lib.rs
sn_ssh/src/buffer/: mod.rs  text_buffer.rs
sn_ssh/src/buffer/storage/: mod.rs  static_vec.rs
sn_ssh/src/containers/: mod.rs  text_buffer.rs
sn_ssh/src/file_ops/: directory.rs  export.rs  file.rs  import.rs  mod.rs
