[package]
name = "sn_app"
version = "0.1.0"
edition = "2021"
description = "SSH Tool for managing servers"
authors = ["Jarred"]
license = "GPLA-3"

[dependencies]
eframe = "0.27.2"
sn_gui = { path = "../sn_gui" }

[package.metadata.bundle]
name = "ServerNav"
identifier = "com.jarredtd.servernav"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jarred Desrosiers 2024. All rights reserved."
category = "Developer Tool"
deb_depends = []
osx_frameworks = []
osx_url_schemes = ["com.jarredtd.servernav"]
